# SmitACE

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  RECONFIGURE_FOR_68020.md  RandyAGA.txt  TODO.md  amiga1200.uae  build_number.cmake
Data/: Factory.json  dt.bm  factory.msk  factory.pln  factory.wll  jamelogo.bm  jamelogo.gpl  jamelogo.pal  jamelogo.plt  pl.pal  playfield.bm  playfield.gpl  playfield.pal  playfield.pal.bak  playfield.plt  playfield.plt.bak  title.bm  title.gpl  title.pal  title.plt  title.plt.bak
data/: game.smt  level00.lvl
docs/: BUILDING.md  INSTALL.md  architecture.md  development.md  script_examples.md
docs/analysis/: 68000_vs_68020_Codegen_Analysis.md  68000_vs_68020_TailCall_Interrupt_DeepDive.md  68000_vs_68020_Working_Comparison.md  68020_ALIGNMENT_FIX.md  68020_INTERRUPT_FIX.md  Call_Pattern_Comparison_68000_vs_68020.md  Compiler_Bug_Analysis.md  Complete_Structural_Analysis.md  Critical_Structural_Difference.md  FRAMEWORK_ANALYSIS.md  Fresh_Eyes_Comparison.md  Interrupt_Context_Functions_Fixed.md  Line_By_Line_Comparison.md  Non_Interrupt_Differences.md  O0_Removal_Fix.md  Register_Saving_Analysis.md  Register_Saving_Fix.md  Stack_Allocation_Fix.md  THE_REAL_DIFFERENCE.md  TailCallOptimizationBug_Analysis.md  TailCallOptimizationBug_FieldReport.md  TailCall_Fix_Summary.md  TailCall_Fix_Verification.md  TailCall_Fix_Verification_Complete.md  TailCall_RegisterUsage_Comparison_Report.md  Why_68000_Works_But_68020_Crashes.md  Why_Still_Crashing_Analysis.md  d3_Register_Issue.md  prefx_tab_Functions_Fixed.md  smite_vs_smite_works_Critical_Differences.md  timerOnInterrupt_Inline_Fix.md
docs/components/: game.md  graphics.md  maze.md
docs/formats/: file_formats.md  game_manifest.md  items_dat.md  level_entities.md  monsters_dat.md  script_events.md
include/: GameState.h  Renderer.h  character.h  doorbutton.h  doorlock.h  fade.h  game.h  game_manifest.h  game_ui.h  game_ui_regions.h  gfx_util.h  ground_item.h  inventory.h  item.h  layer.h  level_entities.h  maze.h  monster.h  mouse_pointer.h  pressure_plate.h  screen.h  script.h  smite.h  tail_call_test.h  text_render.h  title.h  uigfx.h  wall_interactable_placeholder.h  wallbutton.h  wallset.h
repro/: gcc_m68k_tailcall_bug_demo.c  repro_tailcall_bug.c  repro_tailcall_bug.md  repro_tailcall_bug.sh  test_tail_call_bug.sh
src/: build_number.h  smite.c  tail_call_test.c
src/Gfx/: uigfx.c  wallset.c
src/game/: Renderer.c  game.c  gameOver.c  gameState.c  gameWin.c  game_manifest.c  game_ui.c  gfx_util.c  intro.c  level_entities.c  loading.c  pause.c  title.c
src/items/: inventory.c  item.c
src/maze/: maze.c
src/misc/: character.c  doorbutton.c  doorlock.c  fade.c  ground_item.c  layer.c  monster.c  mouse_pointer.c  pressure_plate.c  screen.c  script.c  text_render.c  wall_interactable_placeholder.c  wallbutton.c
tools/atlas_generator/js/: main.js
tools/atlas_generator/js/atlaspack/: index.js
tools/smite_editor/: CMakeLists.txt  CMakePresets.json  README.md
tools/smite_editor/src/: atlas_pack.cpp  atlas_pack.hpp  dungeon_atlas.cpp  dungeon_atlas.hpp  dungeon_gl.cpp  dungeon_gl.hpp  formats.cpp  formats.hpp  gl_extra.cpp  gl_extra.hpp  main.cpp
